[package]
name = "jarvis-p1-exporter"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "0.1.60" }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82", default-features = false, features = ["client", "runtime", "derive", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serialport = "4.0"
tokio = { version = "1.5", features = ["macros"] }
tokio-rustls = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
