[package]
name = "jarvis-p1-exporter"
version = "0.1.0"
authors = ["Jorrit Salverda <jorrit.salverda@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
jarvis-lib = { git = "https://github.com/JorritSalverda/jarvis-lib", tag = "v0.1.66" }
kube = "0.87"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serialport = "4.2"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.6", features = ["v7","js"] }
